# ayol-uchun-clone-project

./: .env  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  celerybeat-schedule  compose.dev.yml  compose.prod.yml  entrypoint.dev.sh  entrypoint.prod.sh  main.py  manage.py  pyproject.toml
apps/common/: admin.py  models.py  urls.py
apps/common/migrations/: 0001_initial.py
apps/common/serializers/: __init__.py  frontend_translations.py  version_history.py
apps/common/views/: __init__.py  frontend_translations.py  version_history.py
apps/courses/: admin.py  apps.py  choices.py  models.py  signals.py  tasks.py  urls.py
apps/courses/migrations/: 0001_initial.py  0002_initial.py  0003_webinar_status.py  0004_alter_course_rating.py
apps/courses/serializers/: __init__.py  category_create.py  category_list.py  category_update.py  comment_create.py  comment_list.py  comment_update.py  course_create.py  course_list.py  course_update.py  get_courses.py  get_single_course.py  get_single_webinar.py  get_webinars.py  lesson_create.py  lesson_list.py  lesson_update.py  module_create.py  module_list.py  module_update.py  webinar_create.py  webinar_finish.py  webinar_list.py  webinar_update.py
apps/courses/views/: __init__.py  category_create.py  category_delete.py  category_list.py  category_update.py  comment_create.py  comment_delete.py  comment_list.py  comment_update.py  course_create.py  course_delete.py  course_get_single.py  course_list.py  course_update.py  finish_webinar.py  get_single_course.py  get_single_webinar.py  get_webinars.py  lesson_create.py  lesson_delete.py  lesson_update.py  lessons_list.py  module_create.py  module_delete.py  module_list.py  module_update.py  modules_list.py  webinar_create.py  webinar_delete.py  webinar_finish.py  webinar_get_single.py  webinar_update.py
apps/news/: admin.py  choices.py  models.py  urls.py
apps/news/migrations/: 0001_initial.py  0002_initial.py  0003_alter_event_latitude_alter_event_longitude.py
apps/news/serializers/: __init__.py  event_list.py  (+17 more)
apps/payments/: admin.py  choices.py  models.py  urls.py
apps/text_services/: apps.py  cyrillic_latin_translators.py  filters.py  q_processors.py
apps/users/: actions.py  admin.py  choices.py  manager.py  models.py  urls.py
core/: asgi.py  celery.py  generator.py  jazzmin_conf.py  urls.py  wsgi.py
core/settings/: base.py  dev.py  prod.py
templates/: home.html  login.html
templates/email/: activation_email.html
(+51 files in other folders)
