[project]
name = "ayoluchuncloneproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "daphne>=4.2.1",
    "django>=5.2.4",
    "django-jazzmin>=3.0.1",
    "djangorestframework>=3.16.0",
    "drf-yasg>=1.21.10",
    "psycopg[binary]>=3.2.9",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]
